--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,2 +1,3 @@
+.inputError.svelte-1ol1brq{color:red;font-size:12px}.formWrapper.svelte-1ol1brq{display:flex;flex-direction:column;max-width:480px;margin:0 auto}
 
 /*# sourceMappingURL=bundle.css.map */
